--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="zh-CN" style="overflow: hidden">
+<html lang="en" style="overflow: hidden">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>VueCG | Display</title>
+    <title>VueCG</title>
   </head>
 
   <body>
